<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/show_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_toast"
        app:layout_constraintEnd_toEndOf="@+id/btnNotificationTap"
        app:layout_constraintStart_toStartOf="@+id/btnNotificationTap"
        app:layout_constraintTop_toBottomOf="@+id/btnNotificationTap" />

    <Button
        android:id="@+id/btnNotificationTap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_notification_tap"
        app:layout_constraintEnd_toEndOf="@+id/btnNotification"
        app:layout_constraintStart_toStartOf="@+id/btnNotification"
        app:layout_constraintTop_toBottomOf="@+id/btnNotification" />

    <Button
        android:id="@+id/btnShowNowtificationAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_notification_action"
        app:layout_constraintEnd_toEndOf="@+id/btnShowToast"
        app:layout_constraintStart_toStartOf="@+id/btnShowToast"
        app:layout_constraintTop_toBottomOf="@+id/btnShowToast" />

    <Button
        android:id="@+id/btnShowReplyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_reply_button"
        app:layout_constraintEnd_toEndOf="@+id/btnShowNowtificationAction"
        app:layout_constraintStart_toStartOf="@+id/btnShowNowtificationAction"
        app:layout_constraintTop_toBottomOf="@+id/btnShowNowtificationAction" />

</androidx.constraintlayout.widget.ConstraintLayout>